<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Mycelium Bitcoin Wallet</string>
    <string name="app_short_name">Mycelium</string>
    <string name="add_account_title">Add New Account</string>
    <string name="add_unrelated_account_title">Add Unrelated Account</string>
    <string name="import_seed_title">Import Master Seed</string>
    <string name="import_words_title">Enter Word List</string>
    <string name="add_account_desc">\tMycelium supports Bitcoin HD, Bitcoin Single Address, Ethereum, and ERC20 Accounts.\n\n\tAll Bitcoin HD, Ethereum, and ERC20 Accounts are created from the same Master Seed and can be restored from it  (12 words that should be written down by you on paper and stored in a safe place).</string>
    <string name="add_single_acc_info">In order to add a Single Address Account based on a private key or a read-only address, please click the Advanced button below.</string>
    <string name="scan_desc">Scan Bitcoin address, private key or HD Bitcoin-Account.</string>
    <string name="scan_seed">Scan Master Seed from Mycelium Backup</string>
    <string name="use_acc_first">You can only have one unused HD Bitcoin Account.</string>
    <string name="clipboard_desc">Import Bitcoin address or private key from clipboard.</string>
    <string name="wordlist_des">Create Master Seed from Word List</string>
    <string name="scan">Scan</string>
    <string name="advanced">Advanced &amp; More</string>
    <string name="clipboard">Clipboard</string>
    <string name="enter_wordlist">Enter Word List</string>
    <string name="hd_account">Add Bitcoin HD Account</string>
    <string name="btcvault_hd_account">Add Bitcoin Vault HD Account</string>
    <string name="close">Close</string>
    <string name="sending">Sending %1$s</string>
    <string name="receiving">Receiving %1$s</string>
    <string name="confirmations">%d Confirmations</string>
    <string name="send">Send</string>
    <string name="send_cointype">Send %1$s</string>
    <string name="receive">Receive</string>
    <string name="receive_cointype">Receive %1$s</string>
    <string name="private_key_deleted">Private key deleted.</string>
    <string name="account_deleted">Account deleted.</string>
    <string name="amount_hint">0.00</string>
    <string name="amount_hint_denomination">0.00 %1$s</string>
    <string name="enter_recipient_title">Send to</string>
    <string name="enter_recipient_hint">%1$s Address or FIO Name</string>
    <string name="enter_recipient_description">Enter %1$s Address or FIO Name</string>
    <string name="recipient_title">Enter recipient address:</string>
    <string name="amount_label">Amount:</string>
    <string name="amount_label_s">Amount: %s</string>
    <string name="amount_title">Amount</string>
    <string name="enter_amount_title">Enter Amount:</string>
    <string name="crypto_address">%1$s Address:</string>
    <string name="max_btc">Spendable: %1$s</string>
    <string name="max_fiat">Spendable: %1$s %2$s</string>
    <string name="s_payment_request">%s Payment Request</string>
    <string name="share_address">Share Address</string>
    <string name="share_address_and_amount">Share Address and Amount</string>
    <string name="s_fio_request">%s FIO Request</string>
    <string name="qr_code">QR Code</string>
    <string name="my_addresses">My Addresses</string>
    <string name="insufficient_funds">Insufficient funds</string>
    <string name="tx_build_error">Unknown error while building transaction.</string>
    <string name="insufficient_funds_for_fee">Insufficient funds to pay fee</string>
    <string name="amount_too_small">The amount you are sending is too small</string>
    <string name="unable_to_build_tx">Unable to build transaction. %s</string>
    <string name="no_utxo">Transaction has no utxo to form a child transaction or utxo has been already spent</string>
    <string name="parent_needs_no_boosting">Parent needs no boosting</string>
    <string name="amount_too_small_short">Amount must exceed %s (network limit)</string>
    <string name="miner_fee_label">Miner fees</string>
    <string name="miner_fee_title">Miner Fee</string>
    <string name="history_row_miner_fee_label">Transaction fee</string>
    <string name="synchronizing">Synchronizing</string>
    <string name="transaction_not_sent">Failed to broadcast transaction</string>
    <string name="set_label">Set Label</string>
    <string name="show_details">Show Details</string>
    <string name="pref_clear_pin">Clear PIN Code</string>
    <string name="pref_clear_pin_summary">Clear the current PIN code</string>
    <string name="pref_set_pin">Set PIN Code</string>
    <string name="pref_set_pin_summary">Set a PIN code that restricts access to sending coins, exporting private keys, and changing the PIN code</string>
    <string name="pref_local_currency">Fiat Currencies</string>
    <string name="pref_local_currency_summary">Select the local fiat currency</string>
    <string name="pref_exchange_source">Exchange source</string>
    <string name="pref_exchange_source_summary">Select the source for obtaining exchange rates between cryptocurrency and fiat currencies</string>
    <string name="pref_bitcoin_denomination">Cryptocurrency denomination</string>
    <string name="pref_bitcoin_denomination_summary">Set preferred cryptocurrency denomination</string>
    <string name="pref_advanced_settings">Advanced Settings</string>
    <string name="pref_pin_require_on_startup_summary">To improve your privacy</string>
    <string name="pref_pin_require_on_startup">Require PIN on start</string>
    <string name="add_to_addressbook">Add to address book</string>
    <string name="lt_sound_on_trade_preference">Play Sound on Trade Activity</string>
    <string name="lt_sound_on_trade_preference_summary">Play a notification sound when trade activity occurs</string>
    <string name="lt_use_email_for_notifications">Use email for notifications</string>
    <string name="lt_miles_kilometers_preference">Use Miles for Distances</string>
    <string name="lt_miles_kilometers_preference_summary">Use miles instead of kilometers for distances</string>
    <string name="email_notification_setting_explanation">Set your email address to receive notifications from Local Trader</string>
    <string name="button_continue">Continue</string>
    <string name="add_advanced_account_warning">Warning:\n These keys won\'t be included in your Master-Seed-Backup. You have to ensure that you have a separate backup of them.</string>
    <string name="new_random_key_desc">Generate new random key pair to use as BTC or BCH SA account.</string>
    <string name="generate_new_key">Generate BTC SA Account</string>
    <string name="trezor">Trezor</string>
    <string name="trezor_import_account">Import a Trezor-HD Bitcoin-Account</string>
    <string name="keepkey">KeepKey</string>
    <string name="keepkey_import_account">Import a KeepKey-HD Bitcoin-Account</string>
    <string name="ledger_import_account">Import a Ledger HD Bitcoin-Account</string>
    <string name="ledger">Ledger</string>
    <string name="ledger_disable_tee_preference">Disable TEE support</string>
    <string name="ledger_disable_tee_preference_summary">Disable Trusted Execution Environment support if present to use a different Ledger Hardware Wallet</string>
    <string name="ledger_unplugged_aid_preference">Set Ledger unplugged AID</string>
    <string name="ledger_unplugged_aid_preference_summary">Support a different AID for ledger\nunplugged custom builds</string>
    <string name="useTor">Tor network</string>
    <string name="useTorDescription">Use the tor-network to communicate with the backend servers. This improves your privacy and may route around restrictive Firewalls. But it may slowdown the performance of this app</string>
    <string name="menu_item_cancel_transaction">Cancel transaction</string>
    <string name="menu_item_rebroadcast_transaction">Rebroadcast transaction</string>
    <string name="menu_item_delete_unconfirmed_transaction">Delete unconfirmed transaction</string>
    <string name="menu_item_bump_mining_fee">Bump Fee (CPFP)</string>
    <string name="share_transaction_manually">Share Transaction manually</string>
    <string name="backup">BACKUP</string>
    <string name="first_bch_installed_title"><![CDATA[Mycelium Bitcoin <font color="#f08c18">Cash</font> module has been installed!]]></string>
    <string name="generate_new_bch_key">Generate BCH SA Account</string>
    <string name="create_fio_legacy_presale_account">Create FIO Legacy Account</string>
    <string name="new_fio_legacy_presale_account_desc">Create FIO Legacy Account ONLY if you have purchased FIO domain during FIO Presale.</string>
    <string name="fio_legacy_account">FIO Legacy Account</string>
    <string name="single_address_account">Single Address Account</string>
    <string name="to_get_your_bitcoin_cash_retrieved"><![CDATA[To get your Bitcoin <font color="#f08c18">Cash</font> retrieved this newly installed module needs some time for synchronisation. It might take from 20 min to several hours, depending on the amount of transactions. When synchronisation is done the information dialog will appear.<br/><br/>You can check the synchronisation progress in notification drawer or Settings -> Bitcoin <font color="#f08c18">Cash</font> module section.<br/><br/>Bitcoin <font color="#f08c18">Cash</font> linked account will be created for every BTC account containing Bitcoin <font color="#f08c18">Cash</font> which has not been retrieved yet.<br/><br/>Go to Balance tab of your Bitcoin <font color="#f08c18">Cash</font> account to instantly exchange it to BTC.]]></string>
    <string name="pref_language">Language</string>
    <string name="change_address_description">In Bitcoin you always spend the full amount you received in an earlier transaction. To pay exact amounts, you send the amount that exceeds what you are paying to a new address in your wallet. That is the change address.\n\nAn outside observer usually cannot see if a transaction was sending the amount you paid or the amount you sent to yourself as change.</string>
    <string name="bech">SegWit native (Bech32)</string>
    <string name="bech_description">All change will be returned to a native SegWit address. These transactions will be the cheapest possible, but transactions will be more identifiable on the blockchain because Bech32 addresses are not yet widely used.</string>
    <string name="p2sh_p2wpkh">Segwit compatible (P2SH)</string>
    <string name="p2sh_p2wpkh_description">All change will be returned to a legacy compatible SegWit address (P2SH). There are no additional privacy implications. This option has slightly higher fees than SegWit native.</string>
    <string name="privacy_guard">Privacy Guard (default)</string>
    <string name="privacy_guard_description">All change will be returned to the address type of the receiver, making it more difficult for blockchain analytics to identify which is the receiving address and which is the change address. These transactions cost 20 to 30 percent more in fees when sending to non-Bech32 addresses.</string>
    <string name="connection_logs">Logs</string>
    <string name="fio_server_error_logs">FIO Server Error Logs</string>
    <string name="boost_look_ahead_button_label">Missing Transactions</string>
    <string name="contact_support_team">Contact Support</string>
    <string name="share_logs">Share Logs</string>
    <string name="support_team">Contact Support</string>
    <string name="support_team_text">Please describe the issue and the steps to reproduce it. To get a complete picture of the problem, please attach the logs.</string>
    <string name="help_share_logs_text">We get your logs only if you share them with us. Logs do not contain personal information.</string>
    <string name="missing_tx_text">Most common cases of missing coins and how it can be resolved.</string>
</resources>