<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/add_advanced_account_warning"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/scan_desc"/>

        <Button
                android:id="@+id/btScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/scan"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/clipboard_desc"/>

        <Button
                android:id="@+id/btClipboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/clipboard"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/trezor_import_account"/>

                    <Button
                        android:id="@+id/btTrezor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:text="@string/trezor"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/keepkey_import_account"/>

                    <Button
                        android:id="@+id/btKeepKey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:text="@string/keepkey"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/ledger_import_account"/>

                    <Button
                        android:id="@+id/btLedger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:text="@string/ledger"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/single_address_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/new_random_key_desc" />

        <Button
                android:id="@+id/btGenerateNewSingleKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_marginBottom="@dimen/margin_medium"
                android:text="@string/generate_new_key"/>

        <Button
                android:id="@+id/btGenerateNewBchSingleKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/margin_medium"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/generate_new_bch_key"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/fio_legacy_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/new_fio_legacy_presale_account_desc" />

        <Button
            android:id="@+id/btCreateFioLegacyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_medium"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/create_fio_legacy_presale_account"/>
    </LinearLayout>
</ScrollView>
