<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#252525"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mycelium.wallet.activity.settings.SetSegwitChangeActivity">
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/change_address_description"
            android:textSize="14sp" />
        <RadioButton
            android:id="@+id/P2SH_P2WPKH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="P2SH_P2WPKH"
            android:text="@string/p2sh_p2wpkh"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="20dp"
            android:tag="P2SH_P2WPKH"
            android:text="@string/p2sh_p2wpkh_description"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/P2WPKH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="P2WPKH"
            android:text="@string/bech"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="20dp"
            android:tag="P2WPKH"
            android:text="@string/bech_description"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/PRIVACY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tag="PRIVACY"
            android:text="@string/privacy_guard"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="20dp"
            android:tag="PRIVACY"
            android:text="@string/privacy_guard_description"
            android:textSize="14sp" />
    </RadioGroup>
</ScrollView>
