<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_bch_installed_title"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/to_get_your_bitcoin_cash_retrieved"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/buttonContinue"
        style="@style/MyceliumButtonModernBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/button_continue"
        android:textColor="@color/btn_text_color_white"
        android:textSize="14sp" />

</LinearLayout>